<resources>
    <string name="title_activity_create_qrcode">CreateQrcodeActivity</string>
    <string name="title_activity_banner">BannerActivity</string>
    <string name="title_activity_pull_to_refresh">PullToRefreshActivity</string>
    <string name="title_activity_cropper">CropperActivity</string>
    <string name="title_activity_cropper_demo">CropperDemoActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reset_pwd">ResetPwdActivity</string>
    <string name="title_activity_user_bind_phone">UserBindPhoneActivity</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="title_activity_personal_info_update">PersonalInfoUpdateActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qrcode_card">QrcodeCardActivity</string>
    <string name="title_activity_bind_email">BindEmailActivity</string>
    <!--全局-->
    <string name="confirm">确定</string>
    <string name="bind">绑定</string>
    <string name="bind_success">绑定成功</string>
    <!--重置密码-->
    <string name="reset_pwd_bind_email_input_hint">请输入绑定的邮箱</string>
    <string name="reset_pwd_use_bind_phone">使用绑定手机重置密码</string>
    <!--绑定邮箱-->
    <string name="bind_email_title">绑定邮箱</string>
    <string name="bind_email_email_input_hint">请输入要绑定的邮箱</string>
    <!--绑定手机-->
    <string name="bind_phone_title">绑定手机</string>
    <string name="bind_phone_phone_label">手机号码 :</string>
    <string name="bind_phone_phone_input_hint">请输入要绑定的手机号码</string>
    <!--验证码-->
    <string name="verification_code_label">验证码：</string>
    <string name="verification_code_input_hint">请输入验证码</string>
    <string name="verification_code_get_normal">获取验证码</string>
    <string name="verification_code_get_wait">%1$d秒后可重新获取</string>
    <string name="verification_code_get_time_out">重新获取</string>
    <string name="verification_code_get_success">获取验证码成功</string>
    <!--邮箱绑定状态-->
    <string name="email_state_title">绑定邮箱</string>
    <string name="email_state_resend_bind_verfy_email">重新发送验证邮件</string>
    <string name="email_state_bind_other_email">绑定其它邮箱</string>
    <string name="login_username_input_hint">请输入用户名</string>
    <string name="login_pwd_input_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="modify_pwd_title">修改密码</string>
    <string name="modify_pwd_old_pwd_label">原密码 :</string>
    <string name="modify_pwd_old_pwd_input_hint">请输入原密码</string>
    <string name="modify_pwd_new_pwd_label">新密码 :</string>
    <string name="modify_pwd_new_pwd_input_hint">请输入密码(6-20位的英文字母或数字)</string>
    <string name="modify_pwd_confirm_label">确认密码 :</string>
    <string name="modify_pwd_confirm_input_hint">请再次输入密码</string>
    <string name="modify">修改</string>
    <string name="personal_info_title">个人信息</string>
    <string name="personal_info_avatar_label">头像</string>
    <string name="personal_info_nickname_label">昵称</string>
    <string name="personal_info_username_label">账号</string>
    <string name="personal_info_mibile_label">手机号码</string>
    <string name="personal_info_email_label">邮箱</string>
    <string name="personal_info_qrcode_label">二维码名片</string>
    <string name="personal_info_gender_label">性别</string>
    <string name="qrcode_card_title">二维码名片</string>
    <string name="register_title">注册</string>
    <string name="reset_pwd_title">重置密码</string>
    <string name="personal_center_title">个人中心</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_new_friends_msg">NewFriendsMsgActivity</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
</resources>
