<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hx.template.ui.fragment.BindPhoneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/white"
            android:divider="@drawable/horizontal_divider_gray"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_normal_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/base_padding_12dp"
                android:paddingRight="@dimen/base_padding_12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bind_phone_phone_label" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:ems="11"
                    android:gravity="center_vertical"
                    android:hint="@string/bind_phone_phone_input_hint"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:textSize="14sp"
                    android:transitionName="bindPhone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_normal_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code_label" />

                <EditText
                    android:id="@+id/vcode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/verification_code_input_hint"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearance" />

                <TextView
                    android:id="@+id/getvcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/round_rect_solid_blue_corner_small"
                    android:padding="8dp"
                    android:text="@string/verification_code_get_normal"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bind"
            style="@style/BaseButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/bind" />
    </LinearLayout>
</FrameLayout>
