<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.LoginActivity"
    tools:showIn="@layout/activity_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:background="@color/app_base_line_color_gray" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_account"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/login_username_input_hint"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textSize="16sp">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/app_base_line_color_gray" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/login_pwd_input_hint"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:background="@color/app_base_line_color_gray" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/app_base_line_color_gray" />

        <Button
            android:id="@+id/login"
            style="@style/BaseButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/forgot_pwd"
            android:textColor="@color/base_color_c1" />
    </LinearLayout>


</RelativeLayout>
